// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicInventoryChartLegend /> should render correctly 1`] = `
<Fragment>
  <ChartLegendItem
    color="#a3f"
    label="Revenue"
  />
</Fragment>
`;

exports[`<PeriodicInventoryChartLegend /> should render correctly when projections are present 1`] = `
<Fragment>
  <ChartLegendItem
    color="#a3f"
    label="Actual Revenue"
  />
  <ChartLegendItem
    color="#a3f"
    label="Projected Inventory"
  />
</Fragment>
`;
